<resources>
    <string name="app_name">Earthquake Monitor</string>
    <string name="num_parte">72-038-1038</string>
    <string name="notification_download_complete">Descarga completa</string>
    <string name="notification_download_failed">Descarga no completada</string>
    <string name="state_unknown">Iniciando..."</string>
    <string name="state_idle">Esperando a que inicie la descarga</string>
    <string name="state_fetching_url">Buscando los recursos para la descarga</string>
    <string name="state_connecting">Conectando con el servidor de descargas</string>
    <string name="state_downloading">Descargando recursos</string>
    <string name="state_completed">Descarga finalizada</string>
    <string name="state_paused_network_unavailable">Descarga pausada debido a que la red no esta disponible</string>
    <string name="state_paused_network_setup_failure">Descarga pausada. Pruebe un sitio web en el explorador</string>
    <string name="state_paused_by_request">Descarga pausada</string>
    <string name="state_paused_wifi_unavailable">Descarga pausada debido a que la Wi-Fi no esta disponible</string>
    <string name="state_paused_wifi_disabled">Descarga pausada pausada debido a que la Wi-Fi esta deshabilitada</string>
    <string name="state_paused_roaming">Descarga pausada debido a que se esta en modo roaming</string>
    <string name="state_paused_sdcard_unavailable">Descarga pausada debido a que el almacenamiento externo no esta disponible</string>
    <string name="state_failed_unlicensed">Descarga falló debido a que no se ha obtenido la aplicación de Google Play</string>
    <string name="state_failed_fetching_url">Descarga falló debido a que los recursos no pudieron ser encontrados</string>
    <string name="state_failed_sdcard_full">Descarga falló debido a que el almacenamiento externo esta lleno</string>
    <string name="state_failed_cancelled">Descarga cancelada</string>
    <string name="state_failed">Descarga falló</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Tiempo restante: %1$s</string>
    <string name="time_remaining_notification">%1$s restante</string>
    <string name="spl_status">Estatus&#8230;</string>
    <string name="spl_loading">Cargando aplicación&#8230;</string>
    <string name="spl_val_ins">Validando instalación&#8230;</string>
    <string name="spl_valid_license">Verificando licencia&#8230;</string>
    <string name="spl_valid_device">Validando el dispositivo&#8230;</string>
    <string name="spl_valid_pubkey">Verificando llave pública&#8230;</string>
    <string name="spl_licensing">Licenciando&#8230;</string>
    <string name="spl_valid_security">Validando proveedor de seguridad&#8230;</string>
    <string name="spl_valid_login">Validando usuario&#8230;</string>
    <string name="spl_lic_send">Enviando petición&#8230;</string>
    <string name="spl_lic_send_device">Enviando petición de validación de dispositivo&#8230;</string>
    <string name="spl_lic_rec">Licencia recibida&#8230;</string>
    <string name="spl_lic_err">Error al recibir el archivo de licencia, favor de intentar nuevamente&#8230;</string>
    <string name="spl_valid_license_tab">Verificando licencia para el dispositivo </string>
    <string name="spl_update_license_tab">Actualizando licencia para el dispositivo </string>
    <string name="spl_msg1">Lo sentimos&#8230;</string>
    <string name="spl_msg2">Para continuar utilizando SGC Móvil Director es necesario renovar la licencia, comprando a través del portal de Pegasus: \n <b>http://www.pegasus.com.mx/</b></string>
    <string name="spl_msg3">ADVERTENCIA: Desinstalar la aplicación causará la pérdida de datos previos, configuraciones y preferencias.</string>
    <string name="spl_msg4">El servidor encontró un error temporal y no fué posible completar tu petición. Favor de reintentar en unos minutos.</string>
    <string name="spl_msg5">Hemos encontrado un problema para conectarse con el servidor. Favor de reintentar en unos minutos.</string>
    <string name="spl_msg6" translatable="false">¡Oh, oh!</string>
    <string name="spl_msg7">La conexión no es confiable</string>
    <string name="spl_msg8">Normalmente, cuando el proveedor de seguridad está actualizado, la información viaja de manera segura y confiable. Sin embargo, el proveedor de su dispositivo no está actualizado, lo que puede significar un riesgo de seguridad. ¿Desea continuar de todas formas o salir para intentar más tarde?</string>
    <string name="spl_msg9">Ha llegado al límite de dispositivos permitidos para su cuenta. Para poder utilizar la aplicación en más dispositivos con su cuenta porfavor compre el complemento de Dispositivo Adicional en la sección de compras.</string>
    <string name="spl_init">Iniciando&#8230;</string>
    <string name="spl_btn_retry">Reintentar</string>
    <string name="spl_ver">V. </string>
    <string name="spl_continue">Continuar</string>
    <string name="config_ws">Conexión SGC Web</string>
    <string name="config_ws_error">URL no válida </string>
    <string name="config_ws_reboot">Es necesario reiniciar la aplicación para que los cambios surjan efecto: </string>
    <string name="error_config">Favor de asignar la constante %1$s y recompilar la aplicación.</string>
    <string name="already_registered">Dispositivo registrado en el servidor con anterioridad.</string>
    <string name="gcm_registered">GCM: dispositivo registrado correctamente (regId = %1$s)!</string>
    <string name="gcm_unregistered">GCM: registro de dispositivo correctamente anulado!</string>
    <string name="gcm_message">GCM: tienes un mensaje!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: error recuperable (%1$s).</string>
    <string name="gcm_deleted">GCM: el servidor ha eliminado %1$d mensajes pendientes!</string>
    <string name="server_registering">Intentanto (intento %1$d/%2$d) registrar el dispositivo en el servidor demo.</string>
    <string name="server_registered">Servidor Demo: Se agrego el dispositivo correctamente!</string>
    <string name="server_unregistered">Servidor Demo: Se eliminó el dispositivo correctamente!</string>
    <string name="server_register_error">No se pudo registrar el dispositivo en el servidor demo después de %1$d intentos.</string>
    <string name="server_unregister_error">No se pudo anular el registro del dispositivo en el servidor demo (%1$s).</string>
    <string name="options_register">Registrar</string>
    <string name="options_unregister">Anular el registro</string>
    <string name="options_clear">Limpiar</string>
    <string name="options_exit">Salir</string>
    <string name="gcm_title">GCM</string>
    <string name="gcm_error_1">Error al enviar el regId (GCM) a SGC Web</string>
    <string name="gcm_error_2">Error al registrar el dispositivo con GCM</string>
    <string name="gcm_error_3">Error al registrar el dispositivo en SGC Web</string>
    <string name="gcm_error_4">Error al registrar el dispositivo con GCM:</string>
    <string name="gcm_error_5">Error al obtener el identificador registrado en GCM</string>
    <string name="gcm_msg_1">Registrando en GCM&#8230;</string>
    <string name="gcm_msg_2">Dispositivo registrado en GCM correctamente</string>
    <string name="gcm_msg_3">Dispositivo registrado en SGC Web correctamente</string>
    <string name="gcm_msg_4">Dispositivo desregistrado de GCM correctamente</string>
    <string name="serial_title">SGC Móvil Director License</string>
    <string name="serial_num">Serial</string>
    <string name="serial_submit">Aceptar</string>
    <string name="copy_message">Copiando archivo obb</string>
    <string name="copy_failed">Fallo al copiar el archivo de expansion</string>
    <string name="msg_lic_ok">Licencia válida</string>
    <string name="msg_lic_validity">Días de licencia restantes:</string>
    <string name="msg_lic_tab">Dispositivo licenciado:</string>
    <string name="msg_lic_err">Usted esta utilizando una licencia corrupta. Por favor renueve su licencia de SGC Movil Director</string>
    <string name="msg_lic_err1">Licencia inválida</string>
    <string name="msg_lic_err2">Licencia caducada</string>
    <string name="msg_lic_err3">Licencia corrupta</string>
    <string name="msg_lic_err4">Servidor inalcanzable, favor de reintentar</string>
    <string name="msg_lic_err5">No se encuentra el archivo de licencia</string>
    <string name="msg_lic_err6">La licencia no corresponde con el dispositivo</string>
    <string name="msg_lic_err7">La licencia no corresponde con el producto</string>
    <string name="lic_title">Licenciamiento</string>
    <string name="purchases_msg">Validando compras&#8230;</string>
    <string name="purchases_title">Productos</string>
    <string name="purchases_err1">Problema configurando in-app billing:&#160;</string>
    <string name="purchases_err2">Falla al consultar el inventario:&#160;</string>
    <string name="purchases_err3">Lo sentimos, las suscripciones no están soportadas en el dispositivo.</string>
    <string name="purchases_err4">Error en la compra:&#160;</string>
    <string name="purchases_err5">Error en la compra. Falla en la validación de autenticidad.</string>
    <string name="purchases_err6">Error al obtener los datos del usuario para realizar la compra.</string>
    <string name="purchases_err7">No se tiene conexión activa con SGC Web para realizar la compra. Si el problema persiste porfavor vuelva a iniciar sesión en la aplicación.</string>
    <string name="purchases_err8">Error al consumir:&#160;</string>
    <string name="purchases_thanks">Gracias por suscribirse al complemento de Logística!</string>
    <string name="purchases_thanks_fact">Gracias por suscribirse al complemento de Facturación!</string>
    <string name="purchases_thanks_security">Gracias por suscribirse al complemento de configuración de seguridad!</string>
    <string name="purchases_buyed_state">COMPRADO</string>
    <string name="purchases_det_name">Nombre</string>
    <string name="purchases_det_type">Tipo</string>
    <string name="purchases_det">Detalle Producto</string>
    <string name="purchases_det_price">Precio</string>
    <string name="purchases_title_bar">Complementos Adicionales</string>
    <string name="purchases_wait">Por favor espere&#8230;</string>
    <string name="purchase_lbl">Comprar</string>
    <string name="device_add_title">Dispositivo Adicional</string>
    <string name="device_add_detail">Permite el uso de SGC Movil Director en otros dispositivos con la misma cuenta</string>
    <string name="device_add_type">Producto consumible</string>
    <string name="device_add_tnks">Gracias por comprar el complemento de Dispositivo Adicional!</string>
    <string name="device_add_con">Consumo exitoso</string>
    <string name="text_verifying_download">Verificando descarga&#8230;</string>
    <string name="text_validation_complete">Validación de archivo de expansion completada.</string>
    <string name="text_validation_failed">Falló validación de archivo de expansion.</string>
    <string name="login_title">SGC Móvil Director Login</string>
    <string name="login_user">Nombre de usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_submit">Entrar</string>
    <string name="login_cancel">Cancelar</string>
    <string name="login_remember">Recordar mis datos</string>
    <string name="drawer_open">Abrir drawer</string>
    <string name="drawer_close">Cerrar drawer</string>
    <string name="action_websearch">Búsqueda Web</string>
    <string name="app_not_available">Lo sentimos, no se tiene un browser disponible</string>
    <string name="main_back">Pulse de nuevo para salir de la aplicación</string>
    <string name="main_off">No hay conexión a internet</string>
    <string name="about_content">Acerca de&#8230;</string>
    <string name="about_auth">Autor: </string>
    <string name="menu_exit">Salir</string>
</resources>