<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrlViewSplash4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">
            <!--Problemas con el servidor-->
            <LinearLayout
                android:id="@+id/serverErrorLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="10sp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:textColor="@color/title_text"
                    android:src="@drawable/server_fail" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="10dp" >
                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/spl_msg6"
                    android:textColor="@color/title_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp" >
                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/spl_msg5"
                    android:textColor="@color/title_text"
                    android:textSize="@dimen/text_size_small" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp" >
                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_error_retry"
                        android:layout_width="250dp"
                        android:background="@color/title_background"
                        android:textColor="@color/stand_blue"
                        android:layout_height="40dip"
                        android:text="@string/spl_btn_retry" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="25dp" >
                    </View>

                    <Button
                        android:id="@+id/btn_error_exit"
                        android:layout_width="250dp"
                        android:background="@color/text_tab_unselected"
                        android:textColor="@color/title_background"
                        android:layout_height="40dip"
                        android:text="@string/menu_exit" />

                </LinearLayout>

            </LinearLayout>
            <!--La conexión no es confiable-->
            <LinearLayout
                android:id="@+id/securityErrorLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="10sp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:textColor="@color/title_text"
                    android:src="@drawable/sorry" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="10dp" >
                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/spl_msg7"
                    android:textColor="@color/title_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp" >
                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/spl_msg8"
                    android:textColor="@color/title_text"
                    android:textSize="@dimen/text_size_small" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp" >
                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_error_continue"
                        android:layout_width="250dp"
                        android:background="@color/title_background"
                        android:textColor="@color/stand_blue"
                        android:layout_height="40dip"
                        android:text="@string/spl_continue" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="25dp" >
                    </View>

                    <Button
                        android:id="@+id/btn_error_exit2"
                        android:layout_width="250dp"
                        android:background="@color/text_tab_unselected"
                        android:textColor="@color/title_background"
                        android:layout_height="40dip"
                        android:text="@string/menu_exit" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loginProgressLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10sp">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp" >
        </View>

        <TextView
            android:id="@+id/splash_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/spl_status"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/stand_blue"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:padding="6dip"
        android:layout_gravity="center_horizontal|bottom">

        <TextView
            android:id="@+id/splash_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/spl_ver"
            android:textColor="@color/title_background"
            android:textSize="@dimen/text_size_medium"/>

    </LinearLayout>

</FrameLayout>