<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prod_det_root_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/title_background">

    <ImageView
        android:id="@+id/prod_img_big"
        android:background="@color/stand_blue"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:layout_marginTop="235dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="25dp">
        <RelativeLayout
            android:id="@+id/prod_relative_layout"
            android:layout_width="fill_parent"
            android:background="@color/title_background"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_alignParentRight="true"
                android:id="@+id/google_play_logo"
                android:layout_marginRight="54dp"
                android:src="@drawable/play"
                android:scaleType="fitStart"
                android:layout_width="60dp"
                android:layout_height="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prod_title_img"
                android:layout_below="@+id/google_play_logo"
                android:contentDescription="@string/purchases_det"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/google_play_logo"
                android:layout_marginLeft="20dp"
                android:id="@+id/prod_title"
                android:layout_toRightOf="@+id/prod_title_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/sgcmovil_gray"
                android:text="@string/purchases_det_name"
                android:layout_marginLeft="20dp"
                android:textSize="12sp"
                android:id="@+id/prod_title_lbl"
                android:layout_below="@+id/prod_title"
                android:layout_toRightOf="@+id/prod_title_img"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="20dp"
                android:id="@+id/prod_type"
                android:layout_below="@+id/prod_title_lbl"
                android:layout_toRightOf="@+id/prod_title_img"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/sgcmovil_gray"
                android:text="@string/purchases_det_type"
                android:layout_marginLeft="20dp"
                android:textSize="12sp"
                android:id="@+id/prod_type_lbl"
                android:layout_below="@+id/prod_type"
                android:layout_toRightOf="@+id/prod_title_img"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/prod_type_lbl"
                android:id="@+id/prod_desc_img"
                android:contentDescription="@string/purchases_det"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/prod_desc"
                android:layout_below="@+id/prod_type_lbl"
                android:layout_toRightOf="@+id/prod_desc_img"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/prod_desc"
                android:id="@+id/prod_price_img"
                android:contentDescription="@string/purchases_det_price"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/prod_price"
                android:layout_below="@+id/prod_desc"
                android:layout_toRightOf="@+id/prod_price_img"/>

            <View
                android:layout_below="@+id/prod_price"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_gravity="right|top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="54dp"
        android:layout_marginTop="170dp">
        <Button
            android:id="@+id/prod_buy_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_white" />
        <ImageView
            android:src="@drawable/google_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/purchase_lbl"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</FrameLayout>